# llmops-token-manager

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_FORMATTER_USE_GUIDE.md  FORMAT_GUIDE.md  check_infra_service_health.py  code_formatter.py  conftest.py  docker-compose.yml  format_code.py  index.py  mypy.ini  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  app.py  main.py
app/api/: __init__.py  auth_endpoints.py  health_endpoints.py  llm_configuration_endpoints.py  token_manager_endpoints.py  user_endpoints.py  user_entitlement_endpoints.py
app/auth/: __init__.py  auth_dependencies.py  dependencies.py  endpoints.py  jwt_auth_token_service.py  jwt_utils.py  models.py
app/core/: __init__.py  config_manager.py  database_connection.py  logger_setup.py  redis_connection.py  startup_diagnostics.py
app/llm_client_provisioning/: __init__.py  llm_client_request_queue.py
app/models/: __init__.py  auth_models.py  llm_config_models.py  request_models.py  response_models.py  token_allocation_model.py  token_manager_models.py  users_model.py  users_models.py
app/postgresql_services/: token_allocation_manager.py
app/psql_db_services/: __init__.py  base_service.py  llm_models_service.py  token_allocation_manager.py  user_entitlements_service.py  users_service.py
app/utils/: passwrd_hashing.py  token_count_estimation.py
infra_automation_scripts/: start.bat  start.sh  stop.bat  stop.sh
postgres_schema/: 1_users_schema.sql  2_llm_models_config_schema.sql  3_users_llm_entitlements_schema.sql  4_token_manager_schema.sql  initial_schema.sql  llm_models_config_schema.sql  token_manager_schema.sql  user_llm_entitlements.sql  users_llm_entitlements_schema.sql  users_schema.sql
tests/: __init__.py  conftest.py  test_config_manager.py  test_credential_validation.py  test_database_connection.py  test_logger_setup.py  test_password_hashing.py  test_redis_connection.py  test_startup_diagnostics.py  test_token_count_estimation.py  test_update_credential_validation.py
tests/test_api_endpoints/: __init__.py  test_health_endpoints.py  test_llm_configuration_endpoints.py  test_token_manager_endpoints.py  test_user_endpoints.py  test_user_entitlement_endpoints.py
tests/test_auth/: __init__.py  test_auth_integration.py  test_dependencies.py  test_jwt_utils.py
tests/test_postgresql_service/: test_database_connection.py
tests/test_psql_db_services/: test_database_connection.py  test_llm_models_service.py  test_token_allocation_manager.py  test_user_entitlements_service.py  test_users_service.py
